# nixcon-na-2024-survey

./: .gitignore  README  flake.nix  main.py  pyproject.toml  results-survey248687.csv
post/: discouse-post.md  future-topics.md  improve-future-events.md
